FIX: landing scrollbar bg-color

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,6 +16,7 @@
 		--color-bg: 0deg 0% 100%;
 		--color-bgcover: 0deg 0% 0% 0;
 		--color-bglight: 0deg 0% 90%;
+		--color-bgscrollbar: 205deg 100% 92%;
 		/* ... */
 	}
 	:root[data-theme='dark'] {
@@ -30,19 +31,6 @@
 		--color-bg: 205deg 70% 10%;
 		--color-bgcover: 205deg 70% 10%;
 		--color-bglight: 205deg 70% 30%;
+		--color-bgscrollbar: 205deg 70% 10%;
 	}
-	/* @media (prefers-color-scheme: dark) {
-		:root {
-			--color-primary: 205deg 60% 65%;
-			--color-secondary: 206deg 100% 89%;
-			--color-accent: 205deg 70% 31%;
-			--color-lightaccent: 206deg 49% 25%;
-			--color-darkaccent: 205deg 100% 84%;
-			--color-lightbackground: 205deg 100% 92%;
-			--color-tbase: 220deg 13% 91%;
-			--color-tlight: 218deg 11% 65%;
-			--color-bg: 205deg 70% 10%;
-			--color-bglight: 205deg 70% 30%;
-		}
-	} */
 }
